fix(DKIMValidator): Add patch from upstream against broken canonical handling
Signed-off-by: David Dreschner <github-2017@dreschner.net>

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 		},
 		"sort-packages": true,
 		"allow-plugins": {
-			"bamarni/composer-bin-plugin": true
+			"bamarni/composer-bin-plugin": true,
+			"cweagans/composer-patches": true
 		},
 		"optimize-autoloader": true,
 		"autoloader-suffix": "Mail"
@@ -26,6 +27,7 @@
 		"bytestream/horde-text-flowed": "^2.1",
 		"bytestream/horde-util": "^2.8.0",
 		"cerdic/css-tidy": "v2.2.1",
+		"cweagans/composer-patches": "~2.0",
 		"ezyang/htmlpurifier": "4.18.0",
 		"glenscott/url-normalizer": "^1.4",
 		"gravatarphp/gravatar": "dev-master#6b9f6a45477ce48285738d9d0c3f0dbf97abe263",
