ci: remove minimum release age for @nextcloud/*
Signed-off-by: Christoph Wurst <1374172+ChristophWurst@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -154,6 +154,11 @@
 			"reviewers": []
 		},
 		{
+			"description": "Disable minimum release age checks for internal dependencies",
+			"matchPackageNames": ["@nextcloud/*"],
+			"minimumReleaseAge": null
+		},
+		{
 			"description": "Only automerge packages that follow semver",
 			"matchPackageNames": [
 				"@nextcloud/vue",
