--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,17 +14,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: ['8.2', '8.3']
-        nextcloud-versions: ['master', 'stable31']
+        php-versions: ['8.5']
+        nextcloud-versions: ['master']
         include:
           - php-versions: '8.4'
             nextcloud-versions: 'master'
             coverage: true
           - php-versions: '8.1'
             nextcloud-versions: 'stable32'
-          - php-versions: '8.4'
-            nextcloud-versions: 'stable32'
-          - php-versions: '8.5'
+          - php-versions: '8.2'
+            nextcloud-versions: 'stable33'
+          - php-versions: '8.3'
             nextcloud-versions: 'master'
     name: Nextcloud ${{ matrix.nextcloud-versions }} php${{ matrix.php-versions }} unit tests ${{ matrix.coverage && '(coverage)' || ''}}
     steps:
@@ -76,19 +76,15 @@ jobs:
                   cache: 'nocache'
                   coverage: true
                 - php-versions: 8.1
-                  nextcloud-versions: 'stable31'
+                  nextcloud-versions: 'stable32'
                   db: 'sqlite'
                   cache: 'redis'
                 - php-versions: 8.2
-                  nextcloud-versions: 'stable31'
+                  nextcloud-versions: 'stable32'
                   db: 'pgsql'
                   cache: 'redis'
-                - php-versions: 8.3
-                  nextcloud-versions: 'stable32'
-                  db: 'mysql'
-                  cache: 'redis'
                 - php-versions: 8.4
-                  nextcloud-versions: 'stable32'
+                  nextcloud-versions: 'stable33'
                   db: 'mysql'
                   cache: 'redis'
                   coverage: true
