chore(release): v5.7.0-rc.1
Signed-off-by: Christoph Wurst <1374172+ChristophWurst@users.noreply.github.com>

--- a/.github/workflows/update-public-suffix-list.yml
+++ b/.github/workflows/update-public-suffix-list.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         branches:
           - 'main'
+          - 'stable5.7'
           - 'stable5.6'
 
     name: update-public-suffix-list-${{ matrix.branches }}
