fix: Fix deprecation warnings when using PHP >= 8.5
Signed-off-by: David Dreschner <david.dreschner@nextcloud.com>

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -172,3 +172,9 @@ path = [".patches/dkimvalidator-fix-broken-canonical-handling.patch"]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "angrychimp, Teon d.o.o. - Bostjan Skufca, Marcus Bointon"
 SPDX-License-Identifier = "MIT"
+
+[[annotations]]
+path = [".patches/url-normalizer-fix-deprecation-warning-on-PHP-8.5.patch"]
+precedence = "aggregate"
+SPDX-FileCopyrightText = "2013 Glen Scott"
+SPDX-License-Identifier = "MIT"
