--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextcloud-mail",
-  "version": "5.7.0-rc.2",
+  "version": "5.7.0",
   "private": true,
   "description": "Nextcloud Mail",
   "license": "AGPL-3.0-only",
